--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <div class="app-container">
-      <div class="left-column">
-        
+
+      <div class="left-column"> 
         <nav class="navbar-container">
           <img src="./img/logo.svg" alt="logo" />
           <input
@@ -67,7 +67,7 @@
 
           <div class="hour-weather-item">
             <p>06:00 PM</p>
-            <img src="./img/clouds.svg" alt="Nublado" />
+            <img src="./img/sun-cloud.svg" alt="Nublado" />
             <p>26°</p>
           </div>
 
@@ -111,11 +111,80 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="right-column">
+        <div class="weekly-forecast-container">
+          
+          <div class="day-weather-item">
+            <p>Segunda</p>
+            <img src="./img/rain-2.svg" alt="Sol com nuvens">
+            <div>
+              <p>29°</p>
+              <p>23°</p>
+            </div>
+          </div>
+
+          <div class="day-weather-item">
+            <p>Terça</p>
+            <img src="./img/sun.svg" alt="Sol">
+            <div>
+              <p>30°</p>
+              <p>25°</p>
+            </div>
+          </div>
+
+          <div class="day-weather-item">
+            <p>Quarta</p>
+            <img src="./img/sun.svg" alt="Sol">
+            <div>
+              <p>25°</p>
+              <p>22°</p>
+            </div>
+          </div>
+
+          <div class="day-weather-item">
+            <p>Quinta</p>
+            <img src="./img/sun-cloud.svg" alt="Sol com nuvens">
+            <div>
+              <p>28°</p>
+              <p>25°</p>
+            </div>
+          </div>
+
+          <div class="day-weather-item">
+            <p>Sexta</p>
+            <img src="./img/sun-cloud.svg" alt="Sol com nuvens">
+            <div>
+              <p>28°</p>
+              <p>23°</p>
+            </div>
+          </div>
+
+          <div class="day-weather-item">
+            <p>Sábado</p>
+            <img src="./img/sun.svg" alt="Sol">
+            <div>
+              <p>30°</p>
+              <p>25°</p>
+            </div>
+          </div>
+
+          <div class="day-weather-item">
+            <p>Domingo</p>
+            <img src="./img/rain-2.svg" alt="Chuva">
+            <div>
+              <p>24°</p>
+              <p>22°</p>
+            </div>
+          </div>
+
+
+
+        </div>
 
       </div>
 
-      <div class="right-column"></div>
     </div>
   </body>
 </html>
