--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Clima Hoje</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./mobile.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,6 +30,7 @@
         </nav>
 
         <div class="showcase-container">
+          
           <div class="showcase-text">
             <h2>Contagem</h2>
             <p>Chance de chuva 0%</p>
@@ -38,6 +40,7 @@
           <div class="showcase-img">
             <img src="./img/sun-clouds.svg" alt="Sol com poucas nuvens" />
           </div>
+
         </div>
 
         <div class="houly-forecast-container">
@@ -186,5 +189,6 @@
       </div>
 
     </div>
+
   </body>
 </html>
